Cleanup DistributedDataStoreRemotingIntegrationTest
We have a few @Ignored tests and assumptions scattered a bit, perform
a general cleanup on them.

JIRA: CONTROLLER-1991
Change-Id: I70054276b5ffa179337a302e5d2498e925b65ce8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>